fix: card align

--- a/css/pages/home/home.css
+++ b/css/pages/home/home.css
@@ -127,6 +127,7 @@
     }
 
     .card-container {
+        margin: 0 auto;
         flex-direction: column;
     }
 
